Fixed card spacing

--- a/style.css
+++ b/style.css
@@ -9,27 +9,18 @@ body {
 }
 
 header {
-  height: 70px;
-  padding: 10px;
   background-color: rgba(255, 255, 255, 0.5);
   display: grid;
-  grid-template-columns: 1fr 0.5fr 2fr 1fr 2.5fr 1fr;
-}
-
-header img {
-  border-radius: 10%;
-  height: 50px;
+  grid-template-columns: 1fr 1fr 2fr 1fr 2fr 1fr;
 }
 
 #title {
-  margin-left:10px;
-  font-size: 35px;
   text-align: left;
 }
 
 #title_container {
   list-style: none;
-  display: inline-flex;
+  display: inline-block;
 }
 
 h1 {
@@ -59,11 +50,9 @@ p {
 }
 
 a {
+  padding: 10px;
   border-radius: 5px;
   text-align: center;
-  line-height: 50px;
-  font-size:25px;
-  color: #22222a;
   font-family: Inter, "Segoe UI", sans-serif;
   text-decoration: none;
 }
@@ -73,12 +62,12 @@ a:hover {
 }
 
 img {
-  border-radius: 25%;
+  border-radius: 5%;
 }
 
 ul {
   list-style: none;
-  display: inline-flex;
+  display: inline-block;
 }
 
 section {
@@ -91,19 +80,20 @@ section {
 
 .card_info {
     display: grid;
-    padding: 5px;
     height: max-content;
-    max-width: max-content;
+    width: 90%;
+    margin-left: 5%;
+    padding: 5px;
     border: 2.5px solid #ebe4f1;
     background-color: #faf7fc;
     border-radius: 10px;
 }
 
 .card_grid {
-  width: 60%;
+  width: 70%;
   padding: 20px;
   margin: 10px;
-  margin-left:20%;
+  margin-left:15%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
